Layout and animated headline fixed.

--- a/src/styles/app-styles.scss
+++ b/src/styles/app-styles.scss
@@ -3,3 +3,9 @@
 body {
   background-color: cornsilk;
 }
+.main {
+  overflow: scroll;
+  @media screen and (min-width: 48em) {
+    overflow: visible;
+  }
+}
