--- a/src/styles/app-styles.css
+++ b/src/styles/app-styles.css
@@ -2,4 +2,14 @@
 body {
   background-color: cornsilk;
 }
+
+.main {
+  overflow: scroll;
+}
+
+@media screen and (min-width: 48em) {
+  .main {
+    overflow: visible;
+  }
+}
 /*# sourceMappingURL=app-styles.css.map */
