--- a/src/styles/app-styles.css
+++ b/src/styles/app-styles.css
@@ -12,4 +12,37 @@ body {
     overflow: visible;
   }
 }
+
+.inactive .gatsby-image-wrapper {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  grid-row: 1 / 4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  z-index: 10;
+}
+
+.inactive .gatsby-image-wrapper img {
+  -webkit-filter: brightness(0.7);
+          filter: brightness(0.7);
+}
+
+.inactive h2 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  z-index: 10;
+  color: #ffffff;
+  text-shadow: 0px 2px 4px black;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.inactive .chakra-text {
+  display: none;
+}
 /*# sourceMappingURL=app-styles.css.map */
