--- a/src/styles/app-styles.scss
+++ b/src/styles/app-styles.scss
@@ -9,3 +9,27 @@ body {
     overflow: visible;
   }
 }
+.active {
+
+}
+.inactive {
+  .gatsby-image-wrapper{
+    grid-row: 1 / 4;
+    grid-column: 1/2;
+    z-index: 10;
+    img {
+      filter:  brightness(0.7);
+    }
+  }
+  h2 {
+    grid-row: 2 / 3;
+    grid-column: 1/2;
+    z-index: 10;
+    color: #ffffff;
+    text-shadow: 0px 2px 4px black;
+    justify-self: center;
+  }
+  .chakra-text {
+    display: none;
+  }
+}
