--- a/src/styles/app-styles.css
+++ b/src/styles/app-styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,600;0,800;1,400&display=swap");
 body {
-  background-color: cornsilk;
+  background-color: #FFFAF0 !important;
 }
 
 .main {
